# Group-4-DS-and-AI-Lab-Project

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTIONS_LOG.md  DSAI_Nav_App.spec  Dockerfile  README.md  app.py  build_exe.py  data_setup.py  deploy.py  developer_note.md  docker-compose.yml  export_android_models.py  pyproject.toml  requirements-hf.txt  requirements.txt  run_public_ui.py  setup.bat  setup.sh
app/: app.py  bbox_output.json  eval_data_module_eval.py  huggingface_app.py  image_bbox_output.json  image_inference.py  image_quality_check.py  main.py  nav_deterministic_logic.py  nav_slm_augment_logic.py  nav_tts_piper.py  navigation_logic.py  navigation_logic_eval.py  performance_metrics.py  performance_pipeline.py  plot_performance_logs.py  save_depth_model.py  streamlit_app.py  try.py
app/components/: __init__.py  depth.py  detector.py  navigation.py  tts.py  visualization.py
app/config/: benchmark_suite.yaml  pipeline_schema.py  settings.py
app/mechanics/: backup_depth_estimation.py  decision_engine.py  depth.py  depth_estimation.py  (+11 more)
configs/: custom_video_benchmark.yaml  egoblind_benchmark.yaml  egoblind_eval_fast.yaml  live_webcam.yaml  scannet_parallel_bench.yaml
data_sources/: data_inspection.ipynb
e2e_runner_configs/: custom_video_benchmark.yaml  custom_video_eval.yaml  ego4d_video_eval.yaml  egoblind_benchmark.yaml  live_webcam.yaml  submission_custom_video.yaml  submission_egoblind_benchmark.yaml
feedbacks/: Milestone1.md  Milestone2.md
notebooks/: 05_eval_results.ipynb  07_tts_analysis.ipynb  egoblind_eval.ipynb  submission_analysis.ipynb
reports/: TTS_And_Pipeline_report_for_milestone_6.md
scripts/: setup_datasets.py
tests/: test_frame_sources.py  test_kaggle_data.py  test_metrics_aggregation.py  test_pipeline_executor.py
(+278 files in other folders)
