[project]
name = "indoor-navigation"
version = "0.1.0"
description = "Action-Oriented Indoor Navigation Assistance for the Visually Impaired"
authors = [
    {name = "Team 4"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "setuptools (<82)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "scipy (<1.15.0)",
    "pandas (<3.0.0)",
    "ipython (<9.0.0)",
    "contourpy (<1.3.0)",
    "certifi (>=2026.2.25,<2027.0.0)",
    "charset-normalizer (>=3.4.7,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "comm (>=0.2.3,<0.3.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "debugpy (>=1.8.20,<2.0.0)",
    "fonttools (>=4.62.1,<5.0.0)",
    "idna (>=3.11,<4.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "ipython-pygments-lexers (>=1.1.1,<2.0.0)",
    "jupyter-client (>=8.8.0,<9.0.0)",
    "jupyter-core (>=5.9.1,<6.0.0)",
    "kiwisolver (>=1.5.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "packaging (>=26.0,<27.0)",
    "platformdirs (>=4.9.4,<5.0.0)",
    "polars (>=1.39.3,<2.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "pyparsing (>=3.3.2,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pyzmq (>=27.1.0,<28.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "tornado (>=6.5.5,<7.0.0)",
    "ultralytics (>=8.4.33,<9.0.0)",
    "ultralytics-thop (>=2.0.18,<3.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)",
    "kaggle (>=1.6.0,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
